src/styles/layout.scss
body.competenz {
  font-family: "Helvetica Neue", sans-serif;
}

@mixin superCenter {
  display: grid;
  place-items: center;
}


.cv-builder-columns {
  display: grid;
  grid-template-columns: 1fr 3fr;
  max-width: 1550px;
  margin: 0 auto;
  h3 {
    font-weight: 400;
    font-size: 1.5rem;
    color: var(--darkblue);
  }
  h4 {
    font-weight: 400;
    font-size: 1rem;
  }
  h1,
  h2,
  h3,
  h4 {
    margin: 1em 0 0.8em 0;
  }
  p {
    margin: 0 0 0.5em 0;
  }
  a {
    text-decoration: none;
    color: var(--lightblue);
  }
  @media (max-width: 800px) {
    grid-template-columns: 1fr;
  }
}

.layout-large-left {
  .sidebar-cnt {
    width: calc(100% + 20vw);
  }
  .cv-builder-cnt {
    // height: 100vh;
    .cv-builder-content {
      display: flex;
    }
    .cv-builder {
      // margin: 0 2rem;
      // transform: scale(0.7) translate(3rem, 3rem);
      // @media (min-width: 1500px) {
      //   transform: scale(0.7) translate(15%, 0rem);
      // }
      .cv-ui-button {
        opacity: 0;
      }
    }
  }
}

.cv-builder-cnt {
  width: 100%;
  display: flex;
  justify-content: center;
  .cv-builder-content {
    padding: 4rem 0;
  }
  .cv-builder {
    max-width: 1200px;
    min-height: 1100px;
    background-color: var(--white);
    margin: 0 30px;
    border-radius: 1rem;
    box-shadow: 2px 5px 15px -3px rgba(0, 0, 0, 0.3);
    padding: 40px;
    //  transition: transform 0.6s cubic-bezier(0.37, 0.15, 0.48, 0.99);
    transform-origin: top right;
    .section {
      margin-top: 3rem;
      cursor: pointer;
    }
    input {
      width: 100%;
    }
    .huge-input {
      font-size: clamp(2rem, 5vw, 3rem);
      background: inherit;
      outline: none;
      border: none;
      color: var(--darkblue);
      font-weight: 700;
      line-height: 1em;
      cursor: pointer;
    }
    .cv-ui-button {
      opacity: 1;
      transition: opacity 0.5s ease;
    }
    .form-grid {
      display: grid;
      grid-template-columns: 1fr 2.3fr;
      grid-gap: 2rem;
    }

    .jobs-list {
      position: relative;
      padding: 0 0.5rem;

      .line {
        position: absolute;
        left: 0;
        bottom: 1.8rem;
        height: calc(100% - 3.8rem);
        width: 2px;
        background-color: var(--lightblue);
      }
      .job-cnt {
        position: relative;
        padding: 1px 1rem 1rem 1rem;
        margin: -1rem 0 0.5rem 0;
        border-radius: var(--radius);
        transition: box-shadow 0.3s ease;
        .controls {
          opacity: 0;
          transition: opacity 0.3s ease;
        }
        &:hover {
          box-shadow: 1px 2px 10px -2px var(--shadow);
          .controls {
            opacity: 1;
          }
        }
        .content {
          cursor: pointer;
        }
      }
    }
    .personal-details {
      margin-top: 9.4rem;
      cursor: pointer;
    }
  }
}

@media (min-width: 1100px) {
  .cv-builder-cnt {
    .cv-builder {
      padding: 5rem;
      .form-grid {
        grid-gap: clamp(4rem, 7vw, 8rem);
      }
    }
  }
}
@media (min-width: 1900px) {
  .cv-builder-cnt {
    .cv-builder {
      padding: 7rem;
    }
  }
}

.form-flex {
  display: flex;
  flex-wrap: wrap;
  &.space-between {
    justify-content: space-between;
  }
}

.sidebar-cnt {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  height: 100vh;
  width: 100%;
  max-width: 550px;
  transition: width 0.7s ease;
  //background-color: var(--off-white);
  pointer-events: all;
  padding: 1rem;
  box-sizing: border-box;
  overflow-y: auto;
  .sidebar {
    position: relative;
    width: 100%;
    .menu-button {
      position: relative;
      border-bottom: 1px solid var(--lightgrey);
      .button-top-bar {
        position: relative;
      }
      .cancel-button {
        opacity: 0.8;
        top: 50%;
        transform: translateY(-50%);
      }

      .panel-content {
        padding: 0 1rem 0 2.8rem;
        .style-thumb {
          width: 100%;
          height: 0;
          padding-bottom: 120%;
          background-color: var(--lightgrey);
          border-radius: 3px;
        }
        p {
          font-size: 16px;
        }
      }
    }
  }
  .login-or-save-bar {
    width: 100%;
    margin-top: 3rem;
    .buttons-cnt {
      transform: translateX(1rem);
    }
    .bar-options {
      display: grid;
      grid-template-columns: 1fr auto;
      grid-gap: 1rem;
      @media (max-width: 1000px) {
        grid-template-columns: 1fr;
      }

      .head {
        border-radius: 25px;
        overflow: hidden;
        background: var(--dark-white);
        .menu-button-cnt {
          font-size: 14px;
          padding: 0 0.5rem;
        }
        &.profile {
          background-color: var(--white);
        }
        &.save {
          .icon {
            margin-right: 0.5rem;
          }
        }
      }
    }
    .panel-content {
      padding: 1.2rem;
    }
  }
  .menu-button-cnt {
    display: flex;
    align-items: center;
    width: 100%;
    text-align: left;
    padding: 0.5em 1em;
    .icon {
      margin-right: 1rem;
      transform: translateY(5px);
    }
  }
}

.help-bubble-focus {
  position: relative;
}
.help-bubble {
  position: absolute;
  background-color: var(--purple);
  padding: 2rem;
  border-radius: var(--radius);
  box-shadow: 2px 5px 15px rgba(0, 47, 59, 0.3), inset 5px 5px 15px #ffffff1f;
  bottom: -68px;
  right: calc(100% + 2.5rem);
  width: 100%;
  max-width: 300px;
  h3,
  h4,
  p {
    color: white;
  }
  h3 {
    margin-top: 0;
  }
  &::after {
    content: "";
    position: absolute;
    bottom: 50px;
    right: -20px;
    width: 0;
    height: 0;
    border-left: 2rem solid var(--purple);

    border-bottom: 2rem solid transparent;
    border-top: 2rem solid transparent;
  }
  .suggestion {
    padding: 0.15rem 0.5rem;
    border-radius: 1rem;
    border: 1px solid var(--dark-white);
    color: var(--dark-white);
    margin-right: 0.5em;
    margin-bottom: 0.5em;
    font-size: 12px;
  }
}

.dark-text {
  color: var(--darkblue);
}

.light-text {
  color: var(--lightblue);
}

.pop-up-bg {
  z-index: 10;
  background: rgba(66, 66, 66, 0.418);
  backdrop-filter: blur(2px);
  width: 100%;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
}
.pop-up-cnt {
  width: 100%;
  max-width: 100%;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  overflow-y: auto;
  .pop-up {
    position: relative;
    padding: 2rem;
    margin: 4rem 2rem;
    background: var(--white);
    border-radius: var(--radius);
    z-index: 11;
    box-shadow: 0 5px 15px var(--shadow);
    width: 100%;
    max-width: 700px;
    @media (max-width: 900px) {
      width: 70%;
      .two-column-grid {
        grid-template-columns: 1fr;
      }
    }
  }
}
.buttons-cnt {
  display: flex;
  justify-content: flex-end;
}
.button-cnt,
.input-cnt {
  margin-top: 1rem;
}

.items-form {
  .editable-list-items {
    list-style: none;
    padding: 0;
    .list-item {
      position: relative;
      padding: 1rem;
      background: var(--off-white);
      margin: 1rem 0;
      // box-shadow: var(--item-shadow);
      display: flex;
      flex-wrap: wrap;
      border-radius: var(--radius);
      .prop {
        margin-right: 2rem;
      }
      .cancel-button {
        opacity: 0.6;
        top: 50%;
        transform: translateY(-50%);
      }
    }
  }
}
.add-new-item-cnt {
  padding: 1.5rem;
  border-radius: var(--radius);
  border: 1px solid var(--lightblue);
  .subtitle {
    color: var(--lightblue);
    padding-bottom: 1rem;
  }
  //  border: 1px solid gray;
}

ul {
  padding-left: 1rem;
}

.cancel-button {
  position: absolute;
  top: 0;
  right: 0;
  cursor: pointer;
  &:hover {
    .subtitle {
      color: rgb(220, 20, 20);
    }
  }
}
.help-button {
  cursor: pointer;
  margin-left: -1rem;
  &:hover {
    .subtitle {
      color: var(--purple);
    }
  }
}

.two-column-grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 2rem;
}

.subtitle {
  font-size: 0.8rem;
  color: grey;
}

.flex {
  display: flex;
  flex-wrap: wrap;
  &.align-center {
    align-items: center;
  }
  &.justify-center {
    justify-content: center;
  }
  &.space-between {
    justify-content: space-between;
  }
}

.grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
  grid-gap: 1rem;
}

